<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crv_"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    android:elevation="3dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_outline_item">


        <LinearLayout
            android:id="@+id/linearLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:id="@+id/lbl_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="45dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:fontFamily="@font/orkney_light" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMedia"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/linearLay"
            android:id="@+id/linearLay2"
            android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_dist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_dist"
            android:textSize="16sp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/lbl_gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_dist"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_gas"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lbl_preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_gas"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_preco"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>